# hackattic

./: README.md
help_me_unpack_elixir/: .gitignore  README.md  mix.exs
help_me_unpack_elixir/config/: runtime.exs
help_me_unpack_elixir/lib/: help_me_unpack.ex
help_me_unpack_elixir/lib/help_me_unpack/: application.ex  hackattic_api.ex
reading_qr_rust/: .gitignore  Cargo.toml  README.md
reading_qr_rust/src/: hackattic.rs  main.rs  qr_reader.rs
